--- a/index.html
+++ b/index.html
@@ -3,43 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>منصّة تأجير العجل</title>
+<title>تأجير العجلات</title>
 <script src="https://cdn.tailwindcss.com"></script>
-<style> body { transition: background 0.4s; } </style>
+<style>body{transition:0.4s}</style>
 </head>
-<body class="min-h-screen bg-gradient-to-br from-blue-50 to-emerald-50 text-gray-900 dark:from-gray-900 dark:to-gray-800 dark:text-gray-100">
+<body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
 
-<header class="sticky top-0 z-10 bg-white/70 dark:bg-gray-900/70 backdrop-blur border-b">
-  <div class="mx-auto max-w-6xl px-4 py-3 flex items-center gap-4">
-    <h1 class="text-xl font-bold text-blue-600">🚲 منصّة تأجير العجل</h1>
-    <div class="ms-auto flex items-center gap-3">
-      <span id="now" class="text-sm text-gray-600 dark:text-gray-300">—</span>
-      <button id="toggleDark" class="text-xs rounded-lg border px-3 py-1.5">🌙</button>
-      <button id="clearAll" class="text-xs rounded-lg border px-3 py-1.5">تفريغ الكل</button>
-    </div>
-  </div>
+<header class="sticky top-0 bg-white dark:bg-gray-800 p-4 flex justify-between">
+<h1 class="text-xl font-bold text-blue-600">🚲 منصة التأجير</h1>
+<span id="now">—</span>
 </header>
 
-<section class="mx-auto max-w-6xl px-4 py-4 grid grid-cols-2 sm:grid-cols-3 gap-3 text-sm">
-  <div class="rounded-xl bg-emerald-100 dark:bg-emerald-900 p-3 text-center">
-    <p>🚲 متاحة</p>
-    <b id="availableCount">0</b>
-  </div>
-  <div class="rounded-xl bg-amber-100 dark:bg-amber-900 p-3 text-center">
-    <p>⏳ مؤجرة</p>
-    <b id="rentedCount">0</b>
-  </div>
-  <div class="col-span-2 sm:col-span-1">
-    <input id="searchBox" class="w-full rounded-xl border px-3 py-2 text-sm focus:ring dark:bg-gray-800 dark:border-gray-700" placeholder="🔍 ابحث بالاسم أو الرقم">
-  </div>
-</section>
-
-<main class="mx-auto max-w-6xl px-4 py-6">
-  <section id="bikes" class="grid gap-4 sm:grid-cols-2 lg:grid-cols-3"></section>
-</main>
-
-<div id="toast" class="fixed bottom-4 inset-x-4 sm:left-1/2 sm:-translate-x-1/2 sm:w-[420px] rounded-xl border bg-white dark:bg-gray-800 shadow-lg p-4 text-sm hidden"></div>
-<audio id="alarm" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg" preload="auto"></audio>
+<div class="max-w-4xl mx-auto p-4 grid grid-cols-1 sm:grid-cols-2 gap-4" id="bikes"></div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
@@ -53,119 +28,101 @@ const firebaseConfig = {
   projectId: "sekl-c6dbf",
   storageBucket: "sekl-c6dbf.appspot.com",
   messagingSenderId: "158135231453",
-  appId: "1:158135231453:web:d1ddad09b14f2390004c34",
-  measurementId: "G-DNBH4Z3ZJ9"
+  appId: "1:158135231453:web:d1ddad09b14f2390004c34"
 };
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 
-// Helpers
-const $ = (s,r=document)=>r.querySelector(s);
-const $$ = (s,r=document)=>Array.from(r.querySelectorAll(s));
-function fmt12(d){ const date=new Date(d); let h=date.getHours(); const m=String(date.getMinutes()).padStart(2,'0'); const s=String(date.getSeconds()).padStart(2,'0'); const ampm=h>=12?'م':'ص'; h=h%12; h=h?h:12; return `${h}:${m}:${s} ${ampm}`; }
-function toast(msg){ const el=$('#toast'); el.classList.remove('hidden'); el.innerHTML=msg; clearTimeout(el._t); el._t=setTimeout(()=>el.classList.add('hidden'),2800); }
+const BIKE_COUNT = 6;
+const timers = {};
 
-// UI
-const BIKE_COUNT=12;
-const timers={};
+function fmtTime(ms){ const d=new Date(ms); let h=d.getHours()%12||12,m=d.getMinutes(),s=d.getSeconds(); return `${h}:${m.toString().padStart(2,'0')}:${s.toString().padStart(2,'0')}`; }
 
-function bikeCard(i){
-  return `
-<article class="rounded-2xl border dark:border-gray-700 bg-white dark:bg-gray-800 p-4 shadow-sm">
-<div class="flex items-center gap-2 mb-3">
-  <div class="w-9 h-9 rounded-xl bg-blue-100 dark:bg-blue-900 text-blue-700 dark:text-blue-200 grid place-items-center font-bold">${i}</div>
-  <h3 class="text-base font-semibold">العجلة ${i}</h3>
-  <span id="status${i}" class="ms-auto text-xs px-2 py-1 rounded-full bg-gray-100 dark:bg-gray-700 text-gray-600">متاحة</span>
-</div>
-<input id="person${i}" class="w-full rounded-xl border mb-2 px-3 py-2 text-sm dark:bg-gray-900" placeholder="👤 اسم المستأجر"/>
-<input id="bike${i}" class="w-full rounded-xl border mb-2 px-3 py-2 text-sm dark:bg-gray-900" placeholder="🚲 اسم العجلة"/>
-<div class="grid grid-cols-2 gap-3">
-  <input id="mins${i}" type="number" min="1" class="rounded-xl border px-3 py-2 text-sm dark:bg-gray-900" placeholder="⏱️ المدة (د)"/>
-  <div id="return${i}" class="rounded-xl border bg-gray-50 dark:bg-gray-900 px-3 py-2 text-sm">—</div>
-</div>
-<div class="mt-4 flex items-center gap-2">
-  <button id="start${i}" class="flex-1 rounded-xl bg-blue-600 text-white px-4 py-2 text-sm">▶️ بدء</button>
-  <button id="stop${i}" class="flex-1 rounded-xl bg-rose-600 text-white px-4 py-2 text-sm" disabled>⏹️ إنهاء</button>
-</div>
-<div id="cd${i}" class="mt-3 text-sm font-semibold text-gray-700 dark:text-gray-300">الوقت المتبقي: —</div>
-</article>`;
-}
-
-function renderGrid(){
-  const wrap=$('#bikes');
-  wrap.innerHTML=Array.from({length:BIKE_COUNT},(_,k)=>bikeCard(k+1)).join('');
+function renderBikes(){
+  const container = document.getElementById('bikes');
+  container.innerHTML = '';
   for(let i=1;i<=BIKE_COUNT;i++){
-    $('#start'+i).addEventListener('click',()=>startRent(i));
-    $('#stop'+i).addEventListener('click',()=>stopRent(i));
+    const card = document.createElement('div');
+    card.id = 'bikeCard'+i;
+    card.className='p-4 bg-white dark:bg-gray-800 rounded shadow flex flex-col gap-2';
+    card.innerHTML=`
+      <h2 class="font-bold">العجلة ${i}</h2>
+      <input id="person${i}" placeholder="اسم المستأجر" class="border px-2 py-1 rounded"/>
+      <input id="bike${i}" placeholder="اسم العجلة" class="border px-2 py-1 rounded"/>
+      <input id="mins${i}" type="number" placeholder="مدة بالدقائق" class="border px-2 py-1 rounded"/>
+      <div class="flex gap-2 mt-2">
+        <button id="start${i}" class="flex-1 bg-blue-600 text-white rounded py-1">▶️ بدء</button>
+        <button id="stop${i}" class="flex-1 bg-red-600 text-white rounded py-1" disabled>⏹️ إنهاء</button>
+      </div>
+      <p id="status${i}">متاحة</p>
+      <p id="cd${i}">الوقت المتبقي: —</p>
+    `;
+    container.appendChild(card);
+
+    document.getElementById('start'+i).onclick=()=>startRent(i);
+    document.getElementById('stop'+i).onclick=()=>stopRent(i);
   }
 }
 
-// Logic
 function startRent(i){
-  const person=$('#person'+i).value.trim();
-  const bike=$('#bike'+i).value.trim();
-  const mins=parseInt($('#mins'+i).value,10);
-  if(!person||!bike||!mins||mins<=0){ toast('⚠️ أدخل البيانات كاملة'); return; }
-  const start=Date.now(), end=start+mins*60*1000;
-  set(ref(db,'bikes/'+i),{person,bikeName:bike,startTime:start,endTime:end});
+  const person=document.getElementById('person'+i).value.trim();
+  const bikeName=document.getElementById('bike'+i).value.trim();
+  const mins=parseInt(document.getElementById('mins'+i).value);
+  if(!person||!bikeName||!mins||mins<=0){alert('أدخل البيانات كاملة'); return;}
+  const endTime=Date.now()+mins*60000;
+  set(ref(db,'bikes/'+i),{person,bikeName,endTime});
 }
 
 function stopRent(i){
   remove(ref(db,'bikes/'+i));
 }
 
-function startCountdown(i,end,person,bike){
-  const el=$('#cd'+i), ret=$('#return'+i);
-  if(timers[i]) clearInterval(timers[i]);
-  function tick(){
-    const now=Date.now(); let diff=Math.floor((end-now)/1000);
-    if(diff<=0){ el.textContent=`⏰ انتهى الوقت لـ "${bike}" (${person})`; $('#alarm').play().catch(()=>{}); clearInterval(timers[i]); return; }
-    const m=Math.floor(diff/60), s=diff%60;
-    el.textContent=`الوقت المتبقي: ${m} دقيقة و ${String(s).padStart(2,'0')} ثانية`;
-    ret.textContent=fmt12(end);
-  }
-  tick(); timers[i]=setInterval(tick,1000);
-}
-
-function stopCountdown(i){ if(timers[i]){clearInterval(timers[i]);timers[i]=null;} $('#cd'+i).textContent='الوقت المتبقي: —'; $('#return'+i).textContent='—'; }
-
-function updateStatus(i,on){ $('#status'+i).textContent=on?'مؤجرة':'متاحة'; $('#start'+i).disabled=on; $('#stop'+i).disabled=!on; $('#person'+i).disabled=on; $('#bike'+i).disabled=on; $('#mins'+i).disabled=on; }
-
-function bindRealtime(){
-  onValue(ref(db,'bikes'),snap=>{
-    const data=snap.val()||{}; let rented=0;
-    for(let i=1;i<=BIKE_COUNT;i++){
-      if(data[i]){
-        const {person,bikeName,endTime}=data[i];
-        $('#person'+i).value=person||''; $('#bike'+i).value=bikeName||'';
-        updateStatus(i,true);
-        startCountdown(i,Number(endTime),person,bikeName);
-        rented++;
-      } else{
-        $('#person'+i).value=''; $('#bike'+i).value=''; $('#mins'+i).value='';
-        updateStatus(i,false);
-        stopCountdown(i);
-      }
+function startCountdown(i,endTime){
+  clearInterval(timers[i]);
+  timers[i]=setInterval(()=>{
+    const diff=Math.floor((endTime-Date.now())/1000);
+    if(diff<=0){
+      clearInterval(timers[i]);
+      document.getElementById('cd'+i).innerText='الوقت انتهى';
+      document.getElementById('status'+i).innerText='متاحة';
+      document.getElementById('start'+i).disabled=false;
+      document.getElementById('stop'+i).disabled=true;
+      return;
     }
-    $('#rentedCount').textContent=rented; $('#availableCount').textContent=BIKE_COUNT-rented;
-  });
+    const m=Math.floor(diff/60), s=diff%60;
+    document.getElementById('cd'+i).innerText=`الوقت المتبقي: ${m}:${s.toString().padStart(2,'0')}`;
+  },1000);
 }
 
-// Time & dark mode
-function tickNow(){ $('#now').textContent=fmt12(new Date()); }
-$('#toggleDark').onclick=()=>document.documentElement.classList.toggle('dark');
-$('#clearAll').onclick=()=>{ if(confirm('مسح كل الحجوزات؟')) remove(ref(db,'bikes')); }
-
-// Search filter
-$('#searchBox').addEventListener('input',e=>{
-  const val=e.target.value.toLowerCase();
-  $$('#bikes article').forEach(card=>{ card.style.display=card.textContent.toLowerCase().includes(val)?'':'none'; });
+// Realtime binding
+onValue(ref(db,'bikes'),snap=>{
+  const data=snap.val()||{};
+  for(let i=1;i<=BIKE_COUNT;i++){
+    if(data[i]){
+      const {person,bikeName,endTime}=data[i];
+      document.getElementById('person'+i).value=person;
+      document.getElementById('bike'+i).value=bikeName;
+      document.getElementById('status'+i).innerText='مؤجرة';
+      document.getElementById('start'+i).disabled=true;
+      document.getElementById('stop'+i).disabled=false;
+      startCountdown(i,endTime);
+    } else {
+      document.getElementById('person'+i).value='';
+      document.getElementById('bike'+i).value='';
+      document.getElementById('mins'+i).value='';
+      document.getElementById('status'+i).innerText='متاحة';
+      document.getElementById('cd'+i).innerText='الوقت المتبقي: —';
+      document.getElementById('start'+i).disabled=false;
+      document.getElementById('stop'+i).disabled=true;
+      clearInterval(timers[i]);
+    }
+  }
 });
 
-// Boot
-renderGrid(); bindRealtime(); tickNow(); setInterval(tickNow,1000);
+setInterval(()=>{document.getElementById('now').innerText=new Date().toLocaleTimeString()},1000);
 
+renderBikes();
 </script>
 </body>
-  </html>
+</html>
